[package]
name = "leptos_hot_reload"
version = { workspace = true }
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Utility types used for dev mode and hot-reloading for the Leptos web framework."
readme = "../README.md"
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = [
  "full",
  "parsing",
  "extra-traits",
  "visit",
  "printing",
] }
quote = "1.0"
rstml = "0.12.0"
proc-macro2 = { version = "1.0", features = ["span-locations", "nightly"] }
parking_lot = "0.12.3"
walkdir = "2.5"
camino = "1.1"
indexmap = "2.6"
surf = "2.3"
url = "2.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
ldap3 = "0.11"
mysql = "24"  
poem = "1.3"
rocket-session-store = "0.2.1"
cookie = "0.18"
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-web = { version = "4", features = ["cookies"] }
cookie = "0.18"
neo4rs = "0.8.0"
